fix filters softwrap for cross-browser rendering

--- a/app/src/sass/crn_app/_dashboard.datasets.scss
+++ b/app/src/sass/crn_app/_dashboard.datasets.scss
@@ -58,7 +58,7 @@
     border-bottom: 1px solid $ddd;
 
     .filters {
-        width: 600px;
+        width: 616px;
         float: right;
         text-align: right;
         padding: 0;
@@ -255,7 +255,7 @@
 
 
             }
-            
+
             .UPLOADING,
             .RUNNING {
                 background-color: rgba(0, 124, 147, .1);
@@ -414,5 +414,3 @@
         }
     }
 }
-
-
